feat(tsd): move individual marked units from boxes to storage boxes